<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@null"
    tools:context=".activity.auth.SignInActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/app_name"
        android:paddingBottom="@dimen/list_item_height"
        android:paddingTop="@dimen/list_item_height"
        android:scaleType="center"
        app:srcCompat="@mipmap/ic_launcher" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="bottom"
        android:background="@null">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:background="@null">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/login_form_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/signin_prompt_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/login_form_password_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/login_form_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/signin_prompt_password"
                    android:imeActionId="6"
                    android:imeActionLabel="@string/signin_action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:autofillHints="@string/signin_prompt_password" />

            </com.google.android.material.textfield.TextInputLayout>

            <CheckBox
                android:id="@+id/login_form_rememberMe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/signin_remember_me" />

            <CheckBox
                android:id="@+id/login_form_autologin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/signin_auto_login" />

            <Button
                android:id="@+id/email_sign_in_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:onClick="onClick"
                android:theme="@style/RegisterAccentButton"
                style="@style/Widget.AppCompat.Button.Colored"
                android:text="@string/signin_action_sign_in"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/forgot_password"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="0.1"
                    android:autoLink="all"
                    android:text="@string/signin_forgot_password"
                    android:textAlignment="textEnd"
                    android:textColor="@color/bright_orange"
                    android:gravity="end" />

                <TextView
                    android:id="@+id/forgot_password_timer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.1" />
            </LinearLayout>

            <!-- Login progress -->
            <ProgressBar
                android:id="@+id/login_progressBar_cyclic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:indeterminateDrawable="@drawable/progress"
                android:minHeight="100sp"
                android:minWidth="100sp"
                android:visibility="invisible" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
